# menv

./: .editorconfig  Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs
tests/: main.rs
